data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_286.wast
;; 7. **Test with alternating `nop` and `loop` structured using `br_if` to determine loop exits**:    - **Constraint**: Verifies that alternating `nop` within complex loop structures maintains correct control flow.    - **Relation to Infinite Loops**: Improper handling of `nop` may confuse loop control, leading to infinite loops.

(assert_invalid
  (module
    (func $test_loop_nop
      (block $outer
        (loop $inner
          nop
          (br_if $outer (i32.const 1))
          nop
          (br_if $inner (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)